--- a/mysite/apgyvendinimas/templates/base.html
+++ b/mysite/apgyvendinimas/templates/base.html
@@ -31,7 +31,7 @@
       <li class="nav-item">
         <a class="nav-link" href="{% url 'index' %}">Pražia</a>
       <li class="nav-item">
-        <a class="nav-link" href="">Visi skelbimai </a>
+        <a class="nav-link" href="{% url 'visi_skelbimai' %}">Visi skelbimai </a>
 
  {% if user.is_authenticated %}
         <li class="nav-item"><a class="nav-link" href="">Įdėti skelbimą</a></li>
