paspaudus ant skelbimo uzeinam i jo issamu aprasyma

--- a/mysite/apgyvendinimas/templates/skelbimai.html
+++ b/mysite/apgyvendinimas/templates/skelbimai.html
@@ -7,7 +7,7 @@
   <p><b>Objektų sąrašas :</b></p>
   {% for skelbimas in skelbimai %}
 <hr>
-    <p>{{skelbimas}} </p>
+    <p><a href="{% url 'skelbimas' skelbimas.id %}">{{skelbimas}}</a></p>
 
 
     {% endfor %}
