--- a/mysite/apgyvendinimas/templates/skelbimai.html
+++ b/mysite/apgyvendinimas/templates/skelbimai.html
@@ -11,5 +11,24 @@
 
 
     {% endfor %}
+<div class="container puslapiai">
+    <nav aria-label="...">
+        {% if skelbimai.has_other_pages %}
+            <ul class="pagination pagination-sm justify-content-end">
+                {% for i in skelbimai.paginator.page_range %}
+                    {% if skelbimai.number == i %}
+                        <li class="page-item active">
+                            <a class="bg-success page-link">{{ i }}</a>
+                        </li>
+                    {% else %}
+                        <li class="page-item">
+                            <a class="page-link" href="?page={{ i }}">{{ i }}</a>
+                        </li>
+                    {% endif %}
+                {% endfor %}
+            </ul>
+        {% endif %}
+    </nav>
+</div>
 
 {% endblock %}
