pridejome Login , logout

--- a/mysite/apgyvendinimas/templates/index.html
+++ b/mysite/apgyvendinimas/templates/index.html
@@ -7,5 +7,5 @@
 <ul>
     <li><b>Objektai :</b> {{ num_objektas }} </li>
 </ul>
-
+<p>Čia jūs lankotes {{ num_visits }}-ą kartą.</p>
 {% endblock %}
