slaptazodzio html paskeisti savais sablonais.

--- a/mysite/apgyvendinimas/templates/registration/login.html
+++ b/mysite/apgyvendinimas/templates/registration/login.html
@@ -27,7 +27,7 @@
 
     </table>
      <br>
-    <input type="submit" value="Prisijungti" />
+    <input type="submit" class="btn btn-success" value="Prisijungti" />
     <input type="hidden" name="next" value="{{ next }}" />
   </form>
   
