atvaizduoti mano skelbimai

--- a/mysite/apgyvendinimas/templates/base.html
+++ b/mysite/apgyvendinimas/templates/base.html
@@ -35,7 +35,7 @@
 
  {% if user.is_authenticated %}
         <li class="nav-item"><a class="nav-link" href="">Įdėti skelbimą</a></li>
-      <li class="nav-item"><a class="nav-link" href="">Mano skelbimai</a></li>
+      <li class="nav-item"><a class="nav-link" href="{% url 'user_skelbimai' %}">Mano skelbimai</a></li>
 
          <li class="nav-item"><a class="nav-link" href="#">
               <svg class="bi bi-person" width="1.5em" height="1.5em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
