--- a/mysite/apgyvendinimas/templates/user_skelbimai.html
+++ b/mysite/apgyvendinimas/templates/user_skelbimai.html
@@ -7,10 +7,8 @@
   <p><b>Objektų sąrašas :</b></p>
   {% for skelbimas in skelbimai %}
 <hr>
-   <p><b>{{skelbimas.caption}} - {{skelbimas.city}} </b></p>
+<p><a href="{% url 'skelbimas' skelbimas.id %}">{{skelbimas}}</a></p>
 <p>{{skelbimas.user}}</p>
-
-
 {% endfor %}
 <div class="container puslapiai">
     <nav aria-label="...">
