--- a/mysite/apgyvendinimas/templates/base.html
+++ b/mysite/apgyvendinimas/templates/base.html
@@ -44,7 +44,9 @@
               {{ user.get_username }}</a></li>
             <li class="nav-item"><a class="nav-link" href="{% url 'logout'%}">Atsijungti</a></li>
           {% else %}
+
             <li class="nav-item"><a class="nav-link" href="{% url 'login'%}">Prisijungti</a></li>
+            <li class="nav-item"><a class="nav-link" href="{% url 'register'%}">Registruotis</a></li>
 
           {% endif %}
 <li>
