--- a/mysite/apgyvendinimas/templates/skelbimai.html
+++ b/mysite/apgyvendinimas/templates/skelbimai.html
@@ -25,7 +25,7 @@
       {% endfor %}
     </div>
     {% else %}
-      <p>Bibliotekoje knygų nėra.</p>
+      <p>Objektų nėra.</p>
     {% endif %}
 
 
