prideta ObjektasReview ir ObjektasReviewAdmin

--- a/mysite/apgyvendinimas/templates/base.html
+++ b/mysite/apgyvendinimas/templates/base.html
@@ -57,6 +57,14 @@
     </ul>
   </div>
 </nav>
+<br>
+{% if messages %}
+    {% for message in messages %}
+        <div class="alert alert-{% if message.tags == 'error' %}danger{% elif message.tags == 'info' %}success{% endif %}" role="alert">
+                {{ message }}
+        </div>
+    {% endfor %}
+{% endif %}
 
 
     <div class="col-sm-8">
