--- a/mysite/apgyvendinimas/templates/registration/password_reset_form.html
+++ b/mysite/apgyvendinimas/templates/registration/password_reset_form.html
@@ -9,8 +9,8 @@
     {{ form.email.errors }}
   {% endif %}
     <p><b>Įveskite el.pašto adresą:<b/></p>
-      <p>{{ form.email }}</p> 
-    <input type="submit" class="btn btn-success" value="Nustatyti slaptažodį">
+      <p><input class="form-control" {{ form.email }}</p>
+    <input type="submit" class="btn btn-success"  value="Nustatyti slaptažodį">
   </form>
 {% endblock %}
 
