--- a/mysite/apgyvendinimas/templates/register.html
+++ b/mysite/apgyvendinimas/templates/register.html
@@ -9,24 +9,24 @@
         <form method="post">
             {% csrf_token %}
             <div class="form-group">
-                <label for="username">Vartotojo vardas</label>
+                <label for="username">Vartotojo vardas:</label>
                 <input name="username" type="text" class="form-control" id="username" aria-describedby="usernameHelp">
                 <small id="usernameHelp" class="form-text text-muted">Iki 100 simbolių.</small>
             </div>
             <div class="form-group">
-                <label for="exampleInputEmail1">El. paštas</label>
+                <label for="exampleInputEmail1">El. paštas:</label>
                 <input name="email" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                 <small id="emailHelp" class="form-text text-muted">Nesidalinsime su niekuo, nesiųsime jokio spamo.
                     Reikalingas naujam slaptažodžiui išsiųsti. </small>
             </div>
             <div class="form-group">
-                <label for="password">Slaptažodis</label>
+                <label for="password">Slaptažodis:</label>
                 <input name="password" type="password" class="form-control" id="password" aria-describedby="pwdHelp">
                 <small id="pwdHelp" class="form-text text-muted">Ne mažiau, kaip 8 simboliai. Negali būti vien tik
                     skaičiai</small>
             </div>
             <div class="form-group">
-                <label for="password2">Pakartoti slaptažodį!</label>
+                <label for="password2">Pakartoti slaptažodį:</label>
                 <input name="password2" type="password" class="form-control" id="password2" aria-describedby="pwd2Help">
                 <br>
             </div>
