--- a/mysite/apgyvendinimas/templates/registration/login.html
+++ b/mysite/apgyvendinimas/templates/registration/login.html
@@ -18,11 +18,11 @@
     <table>
       <tr>
         <td>Vartotojas: </td>
-        <td>{{ form.username }}</td>
+        <td><input class="form-control" {{ form.username }}</td>
       </tr>
       <tr>
         <td>Slaptažodis: </td>
-        <td>{{ form.password }}</td>
+        <td><input class="form-control" {{ form.password }}</td>
       </tr>
 
     </table>
