istaisytos klaidos paieskos pagal tipa ir miesta atvaizduoti atsiliepimai html

--- a/mysite/apgyvendinimas/templates/skelbimai.html
+++ b/mysite/apgyvendinimas/templates/skelbimai.html
@@ -17,8 +17,8 @@
               <img src="{% static 'img/no-image.png' %}" class="card-img-top">
             {% endif %}
                <div class="card-body">
-              <h6 class="card-subtitle mb-2 text-muted">{{ skelbimas.caption }}</h6>
-              <p class="card-text"><a href="{{ skelbimas.id }}">{{ skelbimas.type}}</a></p>
+              <h6 class="card-subtitle mb-2 text-muted">{{ skelbimas.type }}</h6>
+              <p class="card-text"><a href="{{ skelbimas.id }}">{{ skelbimas.caption}}</a></p>
             </div>
           </div>
         </div>
