--- a/mysite/apgyvendinimas/templates/skelbimas.html
+++ b/mysite/apgyvendinimas/templates/skelbimas.html
@@ -29,5 +29,17 @@
 <hr>
 <p><b>Patogumai</b> -  {{ skelbimas.amenities | safe }}</p>
 
+</br>
+  <h4>Atsiliepimai:</h4>
+  {% if skelbimas.reviews.all %}
+    {% for review in skelbimas.reviews.all %}
+      <hr>
+      <strong>{{ review.reviewer }}</strong>, <em>{{ review.date_created}}</em>
+      <p>{{ review.content }}</p>
+    {% endfor %}
+  {% else %}
+    <p>Objektas neturi atsiliepimų</p>
+  {% endif %}
+
 
 {% endblock %}
