--- a/mysite/apgyvendinimas/templates/base.html
+++ b/mysite/apgyvendinimas/templates/base.html
@@ -50,7 +50,7 @@
 
           {% endif %}
 <li>
-    <form action="" method="get" class="form-inline my-2 my-md-0">
+    <form action="{% url 'search' %} " method="get" class="form-inline my-2 my-md-0">
     <input name="query" class="form-control" type="text" placeholder="Paieška">
     </form>
 </li>
