--- a/mysite/apgyvendinimas/templates/user_skelbimai.html
+++ b/mysite/apgyvendinimas/templates/user_skelbimai.html
@@ -11,24 +11,23 @@
 
 {% endfor %}
 
-<div class="container puslapiai">
-    <nav aria-label="...">
-        {% if skelbimai.has_other_pages %}
-            <ul class="pagination pagination-sm justify-content-end">
-                {% for i in skelbimai.paginator.page_range %}
-                    {% if skelbimai.number == i %}
-                        <li class="page-item active">
-                            <a class="bg-success page-link">{{ i }}</a>
-                        </li>
-                    {% else %}
-                        <li class="page-item">
-                            <a class="page-link" href="?page={{ i }}">{{ i }}</a>
-                        </li>
-                    {% endif %}
-                {% endfor %}
-            </ul>
+ <div class="container puslapiai">
+    <span class="step-links">
+        {% if page_obj.has_previous %}
+            <a href="?page=1">&laquo; pirmas</a>
+            <a href="?page={{ page_obj.previous_page_number }}">atgal</a>
         {% endif %}
-    </nav>
+
+        <span class="current">
+            {{ page_obj.number }} iš {{ page_obj.paginator.num_pages }}
+        </span>
+
+        {% if page_obj.has_next %}
+            <a href="?page={{ page_obj.next_page_number }}">pirmyn</a>
+            <a href="?page={{ page_obj.paginator.num_pages }}">paskutinis &raquo;</a>
+        {% endif %}
+    </span>
 </div>
+
 
 {% endblock %}
