idetas Profilis vartotojo, atvaizduotas

--- a/mysite/apgyvendinimas/templates/skelbimas.html
+++ b/mysite/apgyvendinimas/templates/skelbimas.html
@@ -41,5 +41,16 @@
     <p>Objektas neturi atsiliepimų</p>
   {% endif %}
 
+{% if user.is_authenticated %}
+  <div class="fieldWrapper">
+    <hr><br/>
+    <h4>Palikite atsiliepimą:</h4>
+    <form action="" method="post">
+      {% csrf_token %}
+      {{ form.content }}</br>
+      <input type="submit" class="btn btn-success" value="Išsaugoti">
+    </form>
+  </div>
+  {% endif %}
 
 {% endblock %}
