--- a/mysite/apgyvendinimas/templates/profilis.html
+++ b/mysite/apgyvendinimas/templates/profilis.html
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="content-section">
       <div class="media">
-        <img class="rounded-circle account-img" src="{{ user.profilis.nuotrauka.url }}">
+        <img class="rounded-circle account-img" src="{{ user.profilis.foto.url }}">
         <div class="media-body">
           <h2 class="account-heading">{{ user.username }}</h2>
             <p>{{ user.first_name }} {{ user.last_name }}</p>
