--- a/mysite/apgyvendinimas/templates/profilis.html
+++ b/mysite/apgyvendinimas/templates/profilis.html
@@ -11,5 +11,18 @@
         </div>
       </div>
       <!-- FORM HERE -->
+        <form method="POST" enctype="multipart/form-data">
+           {% load crispy_forms_tags %}
+            {% csrf_token %}
+            <fieldset class="form-group">
+                <legend class="border-bottom mb-4">Profilio info</legend>
+                {{ u_form|crispy }}
+                {{ p_form|crispy }}
+            </fieldset>
+            <div class="form-group">
+                <br>
+                <button class="btn btn-success" type="submit">Atnaujinti</button>
+            </div>
+        </form>
     </div>
 {% endblock content %}
