--- a/mysite/apgyvendinimas/templates/skelbimas.html
+++ b/mysite/apgyvendinimas/templates/skelbimas.html
@@ -29,6 +29,12 @@
 <hr>
 <p><b>Patogumai</b> -  {{ skelbimas.amenities | safe }}</p>
 
+{% if skelbimas.user == user %}
+            <div>
+                <a class="btn btn-warning btn-sm mt-1 mb-1" href="{% url 'user_skelbimas_update' skelbimas.id %}">Redaguoti</a>
+            </div>
+            {% endif %}
+
 </br>
   <h4>Atsiliepimai:</h4>
   {% if skelbimas.reviews.all %}
@@ -48,9 +54,10 @@
     <form action="" method="post">
       {% csrf_token %}
       {{ form.content }}</br>
-      <input type="submit" class="btn btn-success" value="Išsaugoti">
+      <input type="submit" class="btn btn-success btn-sm mt-1 mb-1" value="Išsaugoti">
     </form>
   </div>
+
   {% endif %}
 
 {% endblock %}
