--- a/mysite/apgyvendinimas/templates/user_skelbimas_form.html
+++ b/mysite/apgyvendinimas/templates/user_skelbimas_form.html
@@ -10,7 +10,7 @@
             {{ form|crispy }}
         </fieldset>
         <div class="form-group">
-            <button class="btn btn-success" type="submit">Išsaugoti</button>
+            <button class="btn btn-success btn-sm mt-1 mb-1 " type="submit">Išsaugoti</button>
         </div>
     </form>
     </div>
