--- a/mysite/apgyvendinimas/templates/base.html
+++ b/mysite/apgyvendinimas/templates/base.html
@@ -29,7 +29,7 @@
 
 
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'index' %}">Pražia</a>
+        <a class="nav-link" href="{% url 'index' %}">Pradžia</a>
       <li class="nav-item">
         <a class="nav-link" href="{% url 'visi_skelbimai' %}">Visi skelbimai </a>
 
@@ -55,15 +55,35 @@
     <input name="query" class="form-control" type="text" placeholder="Paieška">
     </form>
 </li>
+ <li> {% load i18n %}
+    <li class="nav-item nav-link" >
+      <form action="{% url 'set_language' %}" method="post" >
+        {% csrf_token %}
+        <input name="next" type="hidden" value="{{ redirect_to }}"/>
+        <select name="language" onchange="this.form.submit()">
+          {% load static %}
+          {% get_current_language as LANGUAGE_CODE %}
+          {% get_available_languages as LANGUAGES %}
+          {% for lang in LANGUAGES %}
+          <option style="background-image: url({% static 'img/lt.png' %});" value="{{ lang.0 }}" {% if lang.0 == LANGUAGE_CODE %} selected="selected" {% endif %}>
+            {{ lang.1 }}
+          </option>
+          {% endfor %}
+        </select>
+      </form></li>
+    </li>
+ </li>
     </ul>
   </div>
 </nav>
+
+
 <br>
 {% if messages %}
     {% for message in messages %}
-        <div class="alert alert-{% if message.tags == 'error' %}danger{% elif message.tags == 'info' %}success{% endif %}" role="alert">
-            <div class="alert alert-danger" role="alert">
+        <div class="alert alert-{% if message.tags == 'error' %}danger{% elif message.tags == 'success' %}success{% endif %}" role="alert">
                 {{ message }}
+
         </div>
     {% endfor %}
 {% endif %}
