--- a/mysite/apgyvendinimas/templates/profilis.html
+++ b/mysite/apgyvendinimas/templates/profilis.html
@@ -1,8 +1,9 @@
 {% extends "base.html" %}
-{% block title %}Profilis{% endblock %}
+{% load i18n %}
+{% block title %}Profile{% endblock %}
 {% block content %}
 {% load crispy_forms_tags %}
- <div class="content-section"
+ <div class="content-section">
 
       <div class="media">
         <img class="rounded-circle account-img" src="{{ user.profilis.foto.url }}">
@@ -17,14 +18,16 @@
 
             {% csrf_token %}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Profilio info</legend>
+                <legend class="border-bottom mb-4">{% trans "Profile info" %}</legend>
                 {{ u_form|crispy }}
                 {{ p_form|crispy }}
             </fieldset>
             <div class="form-group">
                 <br>
-                <button class="btn btn-success" type="submit">Atnaujinti</button>
+                <button class="btn btn-success" type="submit">{% trans "Update" %}</button>
             </div>
         </form>
+
+
 </div>
 {% endblock content %}
