--- a/mysite/apgyvendinimas/templates/registration/password_reset_form.html
+++ b/mysite/apgyvendinimas/templates/registration/password_reset_form.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
-{% block title %}Slaptažodžio keitimas{% endblock %}
+{% load i18n %}
+{% block title %}Change your password{% endblock %}
 
 {% block content %}
 <br>
@@ -8,9 +9,9 @@
   {% if form.email.errors %}
     {{ form.email.errors }}
   {% endif %}
-    <p><b>Įveskite el.pašto adresą:<b/></p>
+    <p><b>{% trans "Enter your email address" %}:<b/></p>
       <p><input class="form-control" {{ form.email }}</p>
-    <input type="submit" class="btn btn-success"  value="Nustatyti slaptažodį">
+    <input type="submit" class="btn btn-success"  value="{% blocktrans %} Set password {% endblocktrans %}">
   </form>
 {% endblock %}
 
