--- a/mysite/apgyvendinimas/templates/register.html
+++ b/mysite/apgyvendinimas/templates/register.html
@@ -1,38 +1,37 @@
 {% extends "base.html" %}
-{% block title %}Registracija{% endblock %}
+{% load i18n %}
+{% block title %}Registration{% endblock %}
 {% block content %}
 
 <div class="container register">
     <ul></ul>
-        <h1>Registracija</h1>
+        <h1>{% trans "Registration" %}</h1>
          <ul></ul>
         <form method="post">
             {% csrf_token %}
             <div class="form-group">
-                <label for="username">Vartotojo vardas:</label>
+                <label for="username">{% trans "User name" %}:</label>
                 <input name="username" type="text" class="form-control" id="username" aria-describedby="usernameHelp">
-                <small id="usernameHelp" class="form-text text-muted">Iki 100 simbolių.</small>
+                <small id="usernameHelp" class="form-text text-muted">{% trans "Up to 100 characters" %}.</small>
             </div>
             <div class="form-group">
-                <label for="exampleInputEmail1">El. paštas:</label>
+                <label for="exampleInputEmail1">{% trans "Email" %}:</label>
                 <input name="email" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                <small id="emailHelp" class="form-text text-muted">Nesidalinsime su niekuo, nesiųsime jokio spamo.
-                    Reikalingas naujam slaptažodžiui išsiųsti. </small>
+                <small id="emailHelp" class="form-text text-muted">{% trans "We will not share with anyone, we will not send any spam. Required to send a new password" %}. </small>
             </div>
             <div class="form-group">
-                <label for="password">Slaptažodis:</label>
+                <label for="password">{% trans "Password" %}:</label>
                 <input name="password" type="password" class="form-control" id="password" aria-describedby="pwdHelp">
-                <small id="pwdHelp" class="form-text text-muted">Ne mažiau, kaip 8 simboliai. Negali būti vien tik
-                    skaičiai</small>
+                <small id="pwdHelp" class="form-text text-muted">{% trans "At least 8 characters. It can't just be Numbers" %}.</small>
             </div>
             <div class="form-group">
-                <label for="password2">Pakartoti slaptažodį:</label>
+                <label for="password2">{% trans "Repeat password" %}:</label>
                 <input name="password2" type="password" class="form-control" id="password2" aria-describedby="pwd2Help">
                 <br>
             </div>
-            <button type="submit" class="btn btn-success register-button">Registruotis</button>
+            <button type="submit" class="btn btn-success register-button">{% trans "Register" %}</button>
         </form>
-        <p>Jeigu užsiregistravote anksčiau, <a href="{% url 'login'%}"><strong>prisijunkite.</strong></a></p>
+        <p>{% trans "If you have registered before" %}, <a href="{% url 'login'%}"><strong>{% trans "Sign" %}.</strong></a></p>
 </div>
 
 
