--- a/mysite/apgyvendinimas/templates/registration/password_reset_complete.html
+++ b/mysite/apgyvendinimas/templates/registration/password_reset_complete.html
@@ -1,9 +1,10 @@
 {% extends "base.html" %}
-{% block title %}Slaptažodis pakeistas!{% endblock %}
+{% load i18n %}
+{% block title %}Password changed!{% endblock %}
 
 
 {% block content %}
 <br>
-  <h1>Slaptažodis pakeistas!</h1>
-  <p><a href="{% url 'login' %}">Prisijungti iš naujo</a></p>
+  <h1>{% trans "Password changed" %}!</h1>
+  <p><a href="{% url 'login' %}">{% trans "Reconnect" %}</a></p>
 {% endblock %}
