--- a/mysite/apgyvendinimas/templates/registration/password_reset_confirm.html
+++ b/mysite/apgyvendinimas/templates/registration/password_reset_confirm.html
@@ -1,30 +1,30 @@
 {% extends "base.html" %}
-
+{% load i18n %}
 {% block content %}
 <br>
     {% if validlink %}
-        <p><b>Įveskite naują slaptažodį ir pakartokite!</b></p>
+        <p><b>{% trans "Enter the new password and repeat" %}!</b></p>
         <form action="" method="post">
         {% csrf_token %}
             <table>
                 <tr>
                     <td>{{ form.new_password1.errors }}
-                        <label for="id_new_password1">Naujas slaptažodis:</label></td>
+                        <label for="id_new_password1">{% trans "New password" %}:</label></td>
                     <td>{{ form.new_password1 }}</td>
                 </tr>
                 <tr>
                     <td>{{ form.new_password2.errors }}
-                        <label for="id_new_password2">Patvirtinkite:</label></td>
+                        <label for="id_new_password2">{% trans "Confirm" %}:</label></td>
                     <td>{{ form.new_password2 }}</td>
                 </tr>
                 <tr>
                     <td></td>
-                    <td><input type="submit" class="btn btn-success" value="Pakeisti slaptažodį" /></td>
+                    <td><input type="submit" class="btn btn-success" value="{% blocktrans %} Change password {% endblocktrans %}" /></td>
                 </tr>
             </table>
         </form>
     {% else %}
-        <h1>Nepavyko pakeisti slaptažodžio</h1>
-        <p>Slaptažodžio pakeitimo nuoroda negaliojanti. Prašome inicijuoti slaptažodžio keitimą iš naujo.</p>
+        <h1>{% trans "Password could not be changed" %}</h1>
+        <p>{% trans "The password change link is invalid. Please initiate the password change again" %}.</p>
     {% endif %}
 {% endblock %}
