--- a/mysite/apgyvendinimas/templates/registration/password_reset_done.html
+++ b/mysite/apgyvendinimas/templates/registration/password_reset_done.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
-{% block title %}Slaptažodžio Pakeitimas išsiųstas!{% endblock %}
+{% load i18n %}
+{% block title %}Password Change sent!{% endblock %}
 
 {% block content %}
 <br>
-  <p><b>Slaptažodžio pakeitimo nuorodą išsiuntėme jums el.paštu!</b></p>
+  <p><b>{% trans "We have sent you the password change link by e-mail" %}!</b></p>
 {% endblock %}
