--- a/mysite/apgyvendinimas/templates/registration/password_reset_email.html
+++ b/mysite/apgyvendinimas/templates/registration/password_reset_email.html
@@ -1,4 +1,5 @@
+{% load i18n %}
 <br>
-Sveiki,
-Kažkas mums atsiuntė užklausą slaptažodio keitimui. Jeigu tai buvote Jūs, sekite nuoroda žemiau:
+{% trans "Hello" %},
+{% trans "Someone sent us a request to change the password. If it was you, follow the link below" %}:
 {{ protocol}}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}
