--- a/mysite/apgyvendinimas/templates/search.html
+++ b/mysite/apgyvendinimas/templates/search.html
@@ -1,8 +1,9 @@
 {% extends "base.html" %}
-{% block title %}Paieškos rezultatai{% endblock %}
+{% load i18n %}
+{% block title %}Search results{% endblock %}
 {% block content %}
 
- <h1>Paieškos pagal "{{query}}" rezultatai:</h1>
+ <h1>{% trans "Search results by" %} "{{query}}" :</h1>
   </br>
   {% if skelbimai %}
   <ul>
@@ -13,6 +14,6 @@
     {% endfor %}
   </ul>
   {% else %}
-    <p> Nieko neradome :(</p>
+    <p> {% trans "Not found" %} :(</p>
   {% endif %}
 {% endblock %}
